--- a/style.css
+++ b/style.css
@@ -1,222 +1,229 @@
 body {
-    background-color: #111;
-    color: white;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 0;
-  }
-  
-  .dropdown-container {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    padding-top: 3px;
-    display: none;
-  }
-  
-  .dropdown {
-    background-color: black;
-    padding: 8px;
-    border-radius: 4px;
-    width: 100px;
-  }
-  
-  .dropdown span {
-    cursor: pointer;
-  }
-  
-  .original__movies {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  
-  .profile:hover .dropdown-container {
-    display: block;
-  }
-  
-  .original__movies,
-  .movies__container {
-    padding-left: 50px;
-    display: flex;
-    /* overflow-y: scroll;
+  background-color: #111;
+  color: white;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+.dropdown-container {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  padding-top: 3px;
+  display: none;
+}
+
+.dropdown {
+  background-color: black;
+  padding: 8px;
+  border-radius: 4px;
+  width: 100px;
+}
+
+.dropdown span {
+  cursor: pointer;
+}
+
+.original__movies {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.profile:hover .dropdown-container {
+  display: block;
+}
+
+.original__movies,
+.movies__container {
+  padding-left: 50px;
+  display: flex;
+  /* overflow-y: scroll;
     overflow: hidden; */
-  }
-  
-  .original__movies::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .movieImages {
-    position: relative;
-  }
-  
-  .movieImages img {
-    margin-right: 10px;
-    height: 240px;
-    width: 200px;
-  }
-  
-  .movies__container img {
-    margin-right: 10px;
-    height: 120px;
-    width: 200px;
-  }
+}
 
-  .movieImages,
-  .movies__container img {
-    transition: 0.15s ease-in;
-  }
-  
-  .movieImages:hover,
-  .movies__container img:hover {
-    transform: scale(1.1);
-  }
-  
-  .imageOverlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background:rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(1px);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    transform: opacity 0.25s;
-  }
+.original__movies::-webkit-scrollbar {
+  display: none;
+}
 
-  .movieTitle {
-    font-size: 1.1rem;
-    font-weight: bold;
-    width: 150px;
-    text-align: center;
-  }
+.movieImages {
+  position: relative;
+}
 
-  .imageOverlay:hover {
-    opacity: 1;
-  }
+.movieImages img {
+  margin-right: 10px;
+  height: 240px;
+  width: 200px;
+}
 
+.movies__container img {
+  margin-right: 10px;
+  height: 120px;
+  width: 200px;
+}
 
+.movieImages,
+.movies__container img {
+  transition: 0.15s ease-in;
+}
 
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding-top: 15px;
-  }
-  
-  .logo > img {
-    width: 120px;
-  }
-  
-  .profile {
-    position: relative;
-  }
-  
-  .profile > img {
-    width: 40px;
-  }
-  
-  img {
-    width: 100px;
-  }
-  
-  .featured {
-    height: 400px;
-    position: relative;
-    /* background-image: url('https://image.tmdb.org/t/p/original//3lBDg3i6nn5R2NKFCJ6oKyUo2j5.jpg'); */
-    background-image: url('https://images8.alphacoders.com/115/1152301.png');
-    background-size: cover;
-    background-position: center;
-    padding: 0 0 0 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .featured::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 7.4rem;
-    background-image: linear-gradient(
-      180deg,
-      transparent,
-      rgba(37, 37, 37, 0.61),
-      #111
-    );
-  }
-  
-  .netflixOriginals h2,
-  .movies__header h2 {
-    padding-left: 30px;
-  }
-  
-  .featured h2 {
-    font-size: 50px;
-    margin: 0;
-    z-index: 10;
-  }
-  
-  .featured .featured__buttons {
-    z-index: 10;
-  }
-  
-  .featured .featured__buttons button {
-    font-size: 16px;
-    color: white;
-    background-color: rgba(109, 109, 110, 0.7);
-    border: none;
-    padding: 8px 24px;
-    border-radius: 4px;
-  }
-  
-  .featured::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  
-  .featured .featured__buttons .button__play {
-    background-color: white;
-    color: black;
-  }
-  
-  .button__play i {
-    margin-right: 6px;
-  }
-  
-  .featured .featured__description {
-    max-width: 350px;
-    font-weight: 400;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
-    z-index: 10;
-  }
-  
-  .modal-body iframe {
-    width: 100%;
-  }
-  
-  .modal-body span {
-    color: #333;
-    width: 100%;
-    display: flex;
-    height: 60px;
-    justify-content: center;
-    align-items: center;
-  }
+.movieImages:hover,
+.movies__container img:hover {
+  transform: scale(1.1);
+}
+
+.imageOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1px);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transform: opacity 0.25s;
+}
+
+.movieTitle {
+  font-size: 1.1rem;
+  font-weight: bold;
+  width: 150px;
+  text-align: center;
+}
+
+.imageOverlay:hover {
+  opacity: 1;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding-top: 15px;
+}
+
+.logo > img {
+  width: 120px;
+}
+
+.profile {
+  position: relative;
+}
+
+.profile > img {
+  width: 40px;
+}
+
+img {
+  width: 100px;
+}
+
+.featured {
+  height: 400px;
+  position: relative;
+  /* background-image: url('https://image.tmdb.org/t/p/original//3lBDg3i6nn5R2NKFCJ6oKyUo2j5.jpg'); */
+  background-image: url('https://images8.alphacoders.com/115/1152301.png');
+  background-size: cover;
+  background-position: center;
+  padding: 0 0 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.featured::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 7.4rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #111
+  );
+}
+
+.netflixOriginals h2,
+.movies__header h2 {
+  padding-left: 30px;
+}
+
+.featured h2 {
+  font-size: 50px;
+  margin: 0;
+  z-index: 10;
+}
+
+.featured .featured__buttons {
+  z-index: 10;
+}
+
+.featured .featured__buttons button {
+  font-size: 16px;
+  color: white;
+  background-color: rgba(109, 109, 110, 0.7);
+  border: none;
+  padding: 8px 24px;
+  border-radius: 4px;
+}
+
+.featured::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.featured .featured__buttons .button__play {
+  background-color: white;
+  color: black;
+}
+
+.featured .featured__buttons .button__wishlist {
+  background-color: transparent;
+  color: rgb(255, 0, 0);
+}
+
+.button__play i {
+  margin-right: 6px;
+}
+
+.button__wishlist i {
+  font-size: 1.3rem;
+}
+
+.featured .featured__description {
+  max-width: 350px;
+  font-weight: 400;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.45);
+  z-index: 10;
+}
+
+.modal-body iframe {
+  width: 100%;
+}
+
+.modal-body span {
+  color: #333;
+  width: 100%;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+}
